Add CONTENT_EXPORT for content::MediaStreamAudioLevelCalculator::Level.

This is a speculative fix.

BUG=593591
TBR=miu@chromium.org,grunell@chromium.org

Review URL: https://codereview.chromium.org/1778283002

Cr-Commit-Position: refs/heads/master@{#380367}

Former-commit-id: e0f58d4aab12dc80cf372899966ecfe652499910